set(COMMON_SRC
	gamestate.cpp
	inputstate.cpp
	stopwatch.cpp
	playerstate.cpp
	point.cpp
	enemystate.cpp
	bombstate.cpp
	wallstate.cpp
	uniqueidcreator.cpp
	leveldefinition.cpp
	changeablestate.cpp
	destroyablestate.cpp
	gridpoint.cpp
	powerupstate.cpp
	powerupmaxbombstate.cpp
	powerupgenerator.cpp
	randomdecision.cpp
	powerupmaxvelocitystate.cpp
	explodedbombstate.cpp
	compare.cpp
	leveldefinitionreader.cpp
	csvparser.cpp
    powerupmaxbombrangestate.cpp
)

set(COMMON_TEST_SRC
	gamestatetest.cpp
	inputstatetest.cpp
	pointtest.cpp
	gridpointtest.cpp
	enemystatetest.cpp
	bombstatetest.cpp
	wallstatetest.cpp
	uniqueidcreatortest.cpp
	leveldefinitiontest.cpp
	changeablestatetest.cpp
	destroyablestatetest.cpp
	destroyablestatemock.cpp
	powerupstatetest.cpp
	powerupmaxbombstatetest.cpp
	randomdecisiontest.cpp
	powerupgeneratortest.cpp
	playerstatetest.cpp
	gameenginestub.cpp
	gameenginemock.cpp
	graphicdrawerstub.cpp
	graphicdrawermock.cpp
	inputfetcherstub.cpp
	inputfetchermock.cpp
	powerupmaxvelocitystatetest.cpp
	explodedbombstatetest.cpp
	comparetest.cpp
	leveldefinitionreadertest.cpp
	csvparsertest.cpp
    powerupmaxbombrangestatetest.cpp
)

add_library(common ${COMMON_SRC})
add_library(commontest ${COMMON_TEST_SRC})
